<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"


            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:menu="@menu/top_app_bar"
            >

        </com.google.android.material.appbar.MaterialToolbar>



    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"

            >

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/edit_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorAccent"
                android:elevation="5dp"
                android:padding="16dp"
                app:alignContent="flex_end"
                app:alignItems="flex_end"
                app:justifyContent="space_between"
                app:flexWrap="wrap">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_filter"
                        android:textColor="#004D40" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/filterGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/filter_original"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/edit_original" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/filter_sepia"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/edit_sepia" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/filter_invert"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/edit_invert" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/filter_binary"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/edit_binary" />
                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_transparency"
                        android:textColor="#004D40" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/edit_transparency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:value="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_border"
                        android:textColor="#004D40" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/edit_border"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/edit_border" />
                </LinearLayout>
            </com.google.android.flexbox.FlexboxLayout>
            <ImageView
                android:layout_margin="16dp"
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_famille"
                android:contentDescription="@string/image_description" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>